# winrtmidi

./: CMakeLists.txt
WinRTMidi/: WinRTMidi.cpp  WinRTMidi.h  WinRTMidiImpl.cpp  WinRTMidiImpl.h  WinRTMidiPortWatcher.cpp  WinRTMidiPortWatcher.h
